--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Zpevnik doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Omlouváme se, ale zpěvník potřebuje fungující JavaScript. Pro pokračování bude třeba aktivovat.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
